# hkn-portal

./: .dockerignore  .gitignore  Dockerfile  Instructions.txt  LICENSE  README.md  db.sqlite3  db.sqlite3-journal  docker-compose.yml  inductees.json  installed_packages.txt  key_pair_1.pem  manage.py  members.json  nginx.conf  onboarding.py  onboarding_script.py  outreachStudentsToClear.json  package-lock.json  package.json  pyproject.toml  requirements.txt  runServer.sh  run_server.sh  run_update.sh  setup_server.sh  test.py
.github/workflows/: docker-publish.yml  main.yml
HKNenv/: pyvenv.cfg
HKNenv/Scripts/: activate  activate.bat
frontend/: .gitignore  index.html  package-lock.json  package.json  postcss.config.js  rollup.config.js  rollup.isolation.config.js  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
frontend/public/: bundle.css  bundle.js  bundle.js.map  global.css  index.html
frontend/src/: App.svelte  Layout.svelte  Navbar.svelte  Sidebar.svelte  device.js  main.js  stores.js  utils.js
frontend/src/Components/: EventPopUp copy 2.svelte  Feedback.svelte  (+22 more)
hkn-portal-venv/: pyvenv.cfg
hkn-portal-venv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
myapp/: asgi.py  index.html  settings.py  urls.py  wsgi.py
myapp/api/: 0002_customuser_preferred_name.py  admin.py  apps.py  constraints.py  eventactions.py  exceptions.py  forms.py  models.py  permissions.py  register.py  serializers.py  urls.py  utils.py  views.py
myapp/spa/: apps.py  views.py
myapp/static/: bundle.css  bundle.js  bundle.js.map  global.css
(+191 files in other folders)
